# amplayd

./: CMakeLists.txt  INSTALL  README
debian/: amplayd.examples  amplayd.init  changelog  control  copyright  rules
doc/: CMakeLists.txt  amplayd.8  amplayd.8.in  sync.sh
src/: CMakeLists.txt  amplayd.c  config.h.in  playlist.c  playlist.h
